# saddler

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  prek.toml  pyproject.toml
docs/: spec.md
saddler/: __init__.py  cli.py
saddler/agent/: __init__.py  harness.py  model.py  service.py
saddler/api/: agent.py  runtime.py  storage.py
saddler/app/: __init__.py  agent.py  errors.py  resolver.py  runtime.py  storage.py
saddler/extensions/: __init__.py
saddler/hitch/: __init__.py  cli.py  errors.py  executor.py  loader.py  model.py  plan.py
saddler/infra/: __init__.py
saddler/resource/: __init__.py  fetcher.py  model.py
saddler/runtime/: __init__.py  backend.py  model.py  service.py
saddler/shared/: registry.py  repository.py  types.py  utils.py
saddler/storage/: __init__.py  model.py  service.py
tests/cli/: test_cli_completion.py  test_help_markup.py  test_runtime_create_cli.py  test_runtime_exec_cli.py  test_runtime_harnesses_cli.py  test_runtime_ls_status.py
tests/extensions/: test_gateway_agents.py  test_gateway_auth.py  test_gateway_cli.py  test_gateway_client.py  test_gateway_pty_bridge.py  test_gateway_stdio_bridge.py  test_gateway_streamable_http.py  test_gateway_tty_session.py  test_gateway_tty_ws.py  test_gateway_ui.py  test_gateway_websocket.py
tests/hitch/: test_executor.py  test_plan.py
tests/infra/: test_cursor_harness_install.py  test_harness_exec_handles.py  test_openclaw_harness.py  test_resource_fetchers.py  test_runtime_docker_backend.py  test_runtime_docker_popen.py  test_runtime_local_backend.py
(+55 files in other folders)
